package service;

import model.Persona;

public interface IVacunacion {
    String vacunar(Persona persona);
}
